--- a/app/views/blog/index_user.html.erb
+++ b/app/views/blog/index_user.html.erb
@@ -1,1 +1,14 @@
 index user page
+<%= current_user.name if current_user %>
+
+<% if logged_in? %>
+<li class="dropdown">
+  <ul class="dropdown-menu">
+    <li>
+      <%= link_to "Log out", api_v1_logout_path, method: "delete" %>
+    </li>
+  </ul>
+</li>
+<% else %>
+<li><%= link_to "Log in", api_v1_login_path %></li>
+<% end %>
