--- a/app/assets/templates/new_post.html.erb
+++ b/app/assets/templates/new_post.html.erb
@@ -3,6 +3,21 @@
   <input type="text" ng-model="title" />
   <textarea ng-model="summary"></textarea>
   <textarea ng-model="content"></textarea>
+	<textarea ng-model="markdown"></textarea>
+	<input type="hidden" ng-model="img" />
+	<input type="text" ng-model="author" />
+	<select ng-model="is_recommend">
+    <option value="1" selected>推荐</option>
+    <option value="0">不推荐</option>
+	</select>
+	<select ng-model="is_published">
+    <option value="1" selected>是</option>
+    <option value="0">否</option>
+	</select>
+	<select ng-model="can_comment">
+    <option value="1" selected>可以</option>
+    <option value="0">不可以</option>
+	</select>
   <button type="submit">Post</button>
 </form>
 <h1>The post View!</h1>
