--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -101,17 +101,18 @@ body {
 
 .posts {
   width: 100%;
-  height: 300px;
+  height: 550px;
 }
 
+
 .post {
-  float: left;
+  margin: 15px 30%;
   width: 40%;
 }
 
 .post-title {
   float: left;
-  width: 80%;
+  width: 75%;
   height: 20px;
   overflow: hidden;
 }
@@ -128,6 +129,7 @@ body {
   width: 100%;
   list-style: none;
   line-height: 25px;
+  padding: 0 0 0 5px;
 }
 
 .post-pic-box {
@@ -138,6 +140,16 @@ body {
 }
 
 .picture-left {
+  position: absolute;
+  left: -15px;
+  top: 80px;
+
+}
+
+.picture-right {
+  position: absolute;
+  left: 96%;
+  top: 80px;
 
 }
 
@@ -145,7 +157,7 @@ body {
   max-height: 230px;
   width: 90%;
   height: 300px;
-  margin: 0 auto;
+  margin: 15px auto;
   padding: 10px 20px;
   position: relative;
   max-width: 320px;
@@ -163,9 +175,33 @@ body {
   height: 100%;
 }
 
-.picture-right {
+.post-inf {
+  float: left;
+  width: 30%;
+  height: 100%;
+  text-align: center;
 
 }
+
+.two-code-pic {
+  height: 130px;
+  margin: 15px 30%;
+  min-width: 125px;
+  width: 35%;
+}
+
+.two-code-pic img {
+  width: 100%;
+  height: 100%;
+}
+
+.company-inf {
+  min-width: 125px;
+  width: 35%;
+  margin-left: 30%;
+  overflow: hidden;
+}
+
 /* Custom page footer */
 .footer {
   padding: 19px 0 5px 0;
@@ -196,6 +232,24 @@ a:hover,a:focus {
   margin: 30px 0;
 }
 
+@media screen and (min-width: 768px) {
+  .posts {
+    width: 100%;
+    height: 300px;
+  }
+
+  .post {
+    float: left;
+    width: 40%;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .post ul,li {
+    padding: 0 0 0 40px;
+  }
+}
 
 /* Main marketing message and sign up button */
 .jumbotron {
