Add loading bar.

--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -31,7 +31,7 @@
     <div class="post-pic-ba">
       <a class="picture-left" ng-click="swithLeftPic()"><img src="images/leftjiantou.png"></a>
       <div class="post-pic">
-        <img src={{imageSrc[imageIndex]}}>
+        <img src="{{imageSrc[imageIndex]}}" />
       </div>
       <a class="picture-right" ng-click="swithRightPic()"><img src="images/rightjiantou.png"></a>
     </div>
