fixed main.html switch images bug
修复了主页图片轮转的bug

--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -39,8 +39,8 @@
   </div>
 -->
 
-<div>
-  <div style="height: 305px">
+<div class="post-pic-box hidden-xs">
+  <div>
     <carousel interval="myInterval">
       <slide ng-repeat="slide in slides" active="slide.active">
         <img ng-src="{{slide.image}}" style="margin:auto;">
