--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -137,50 +137,32 @@ body {
 
 .post-pic-box {
   float: left;
-  height: 100%;
+  height: 90%;
   width: 30%;
-  padding: 10px
+  min-width: 200px;
+  padding: 25px;
+  margin-left: 3%;
 }
 
-.picture-left {
-  position: absolute;
-  left: -15px;
-  top: 80px;
-
+.post-pic-box .carousel-indicators {
+  display: none;
 }
 
-.picture-right {
-  position: absolute;
-  left: 96%;
-  top: 80px;
-
-}
-
-.post-pic-ba {
-  max-height: 230px;
-  width: 90%;
-  height: 300px;
-  margin: 15px auto;
-  padding: 10px 20px;
-  position: relative;
-  max-width: 320px;
-  min-width: 250px;
-  background: #DEDEB9;
-}
-
-.post-pic {
-  width: 100%;
+.post-pic-box div {
   height: 100%;
 }
 
-.post-pic img{
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
   width: 100%;
   height: 100%;
+}
+.carousel-caption{
+  padding-top: 150px;
 }
 
 .company-box {
   float: left;
-  width: 30%;
+  width: 25%;
   height: 100%;
   text-align: center;
 
@@ -188,7 +170,7 @@ body {
 
 .two-code-pic {
   height: 130px;
-  margin: 15px 30%;
+  margin: 15px auto;
   min-width: 125px;
   width: 35%;
 }
@@ -201,7 +183,7 @@ body {
 .company-inf {
   min-width: 125px;
   width: 35%;
-  margin-left: 30%;
+  margin: 0 auto;
   overflow: hidden;
 }
 
