--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -22,6 +22,10 @@ body {
   margin: 0;
 }
 
+/*
+  main.html css
+*/
+
 .header {
   width: 100%;
   height: 350px;
@@ -99,43 +103,43 @@ body {
   margin-top: -2px;
 }
 
-.posts {
+.main-posts {
   width: 100%;
   height: 560px;
   overflow: hidden;
 }
 
 
-.post {
+.main-post {
   margin: 15px auto;
   width: 90%;
 }
 
-.post-title {
+.main-post-title {
   float: left;
   width: 70%;
   height: 20px;
   overflow: hidden;
 }
 
-.post-inf {
+.main-post-inf {
   float: left;
   width: 30%;
   padding-left: 5%;
 }
 
-.post span {
+.main-post span {
   color: #2f5b49;
 }
 
-.post ul,li {
+.main-post ul,li {
   width: 100%;
   list-style: none;
   line-height: 25px;
   padding: 0 0 0 5px;
 }
 
-.post-pic-box {
+.main-post-pic-box {
   float: left;
   height: 90%;
   width: 30%;
@@ -144,11 +148,11 @@ body {
   margin-left: 3%;
 }
 
-.post-pic-box .carousel-indicators {
+.main-post-pic-box .carousel-indicators {
   display: none;
 }
 
-.post-pic-box div {
+.main-post-pic-box div {
   height: 100%;
 }
 
@@ -218,13 +222,13 @@ a:hover,a:focus {
 }
 
 @media screen and (min-width: 768px) {
-  .posts {
+  .main-posts {
     width: 100%;
     height: 300px;
     overflow: hidden;
   }
 
-  .post {
+  .main-post {
     float: left;
     width: 40%;
     margin: 0;
@@ -233,36 +237,55 @@ a:hover,a:focus {
 }
 
 @media screen and (min-width: 992px) {
-  .post ul,li {
+  .main-post ul,li {
     padding: 0 0 0 40px;
   }
 }
+/*
+  posts.html css
+*/
+.posts-head  {
+  width: 100%;
+  height: 80px;
+  margin: 0;
+  padding: 0;
+  background: #eeeeed;
+  border-bottom: 1px solid #ddd;
+}
 
-/* Main marketing message and sign up button */
-.jumbotron {
+.posts-head .posts-logo {
+  float: left;
+  width: 30%;
+  height: 70px;
+  border-right: 3px solid #b2b2b2;
+  margin-top: 5px;
+}
+
+.posts-head .posts-logo img {
+  width: 80%;
+  height: 100%;
+}
+
+.posts-head .posts-blog {
+  float: left;
+  height: 70px;
+  width: 15%;
+  margin-top: 5px;
+  border-right: 3px solid #b2b2b2;
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
+  padding-top: 15px;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
+.posts-head .posts-photo {
+  float: left;
+  height: 70px;
+  width: 15%;
+  margin-top: 5px;
+  border-right: 3px solid #b2b2b2;
+  text-align: center;
+  padding-top: 15px;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.posts-head a {
+  font-size: 26px;
 }
