--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -15,43 +15,31 @@
     <a><img src="/images/search-ico.png"></a>
   </div>
 </div>
-<div class="posts">
-  <div class="post">
+<div class="main-posts">
+  <div class="main-post">
     <ul>
       <li ng-repeat="p in posts">
-        <div class="post-title"><a>{{p.title}}</a></div>
-        <div class="post-inf">
+        <div class="main-post-title"><a>{{p.title}}</a></div>
+        <div class="main-post-inf">
           <img src="/images/post-ico.png">
           <span>(<span>500</span>)</span>
         </div>
       </li>
     </ul>
   </div>
-<!--
-  <div class="post-pic-box hidden-xs">
-    <div class="post-pic-ba">
-      <a class="picture-left" ng-click="swithLeftPic()"><img src="images/leftjiantou.png"></a>
-      <div class="post-pic">
-        <img src="{{imageSrc[imageIndex]}}" />
-      </div>
-      <a class="picture-right" ng-click="swithRightPic()"><img src="images/rightjiantou.png"></a>
+  <div class="main-post-pic-box hidden-xs">
+    <div>
+      <carousel interval="myInterval">
+        <slide ng-repeat="slide in slides" active="slide.active">
+          <img ng-src="{{slide.image}}" style="margin:auto;">
+          <div class="carousel-caption">
+            <h4>Slide {{$index}}</h4>
+            <p>{{slide.text}}</p>
+          </div>
+        </slide>
+      </carousel>
     </div>
   </div>
--->
-
-<div class="post-pic-box hidden-xs">
-  <div>
-    <carousel interval="myInterval">
-      <slide ng-repeat="slide in slides" active="slide.active">
-        <img ng-src="{{slide.image}}" style="margin:auto;">
-        <div class="carousel-caption">
-          <h4>Slide {{$index}}</h4>
-          <p>{{slide.text}}</p>
-        </div>
-      </slide>
-    </carousel>
-  </div>
-</div>
   <div class="company-box hidden-xs">
     <div class="two-code-pic">
       <img src="images/two-code.jpg">
