--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -245,12 +245,13 @@ a:hover,a:focus {
   posts.html css
 */
 .posts-head  {
+  float: left;
   width: 100%;
   height: 80px;
   margin: 0;
   padding: 0;
   background: #eeeeed;
-  border-bottom: 1px solid #ddd;
+  box-shadow: 0 5px 5px #ddd;
 }
 
 .posts-head .posts-logo {
@@ -259,6 +260,7 @@ a:hover,a:focus {
   height: 70px;
   border-right: 3px solid #b2b2b2;
   margin-top: 5px;
+  padding-left: 5%;
 }
 
 .posts-head .posts-logo img {
@@ -288,4 +290,136 @@ a:hover,a:focus {
 
 .posts-head a {
   font-size: 26px;
+  color: #62A696;
+}
+
+.posts-head .posts-search {
+  margin-top: 5px;
+  float: left;
+  width: 40%;
+  height: 70px;
+  padding: 15px 0 0 5%;
+}
+
+.posts-head .posts-search div {
+  float: left;
+  background: #bdbdbd;
+  width: 90%;
+  height: 40px;
+}
+
+.posts-head .posts-search input {
+  border: 0;
+  width: 75%;
+  background: #bdbdbd;
+  height: 100%;
+}
+
+.posts-head .posts-search a {
+  float: right;
+}
+
+.posts-box {
+  float: left;
+  width: 100%;
+  background: #fff;
+  margin-top: 20px;
+}
+
+.posts-box .posts {
+  width: 60%;
+  height: 100%;
+  margin-left: 5%;
+  float: left;
+}
+
+.posts-box .post-item {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  margin: 50px 0 10px;
+
+}
+
+.posts-box .post-title {
+  position: absolute;
+  width: 100%;
+  height: 55px;
+  background-image: url('/images/post-title.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  top: 10px;
+  z-index: 2;
+  padding: 10px 5%;
+  color: #fff;
+}
+
+
+.posts-box .post-text {
+  position: absolute;
+  width: 96%;
+  height: 300px;
+  border: 1px solid #ddd;
+  left: 4%;
+  z-index: 1;
+  box-shadow: 5px 5px 5px #ddd;
+}
+
+.posts-box .post-inf {
+  float: left;
+  height: 100%;
+  padding: 70px 0 0 10px;
+  overflow: hidden;
+  width: 60%;
+}
+
+.posts-box .post-picture {
+  float: left;
+  height: 100%;
+  width: 40%;
+  padding: 70px 0 0 10px;
+  text-align: center;
+}
+
+.posts-box .post-picture .image {
+  width: 90%;
+  height: 85%;
+}
+
+.posts-box .post-picture span {
+  color: #2f5b49;
+  margin: 0 5px;
+}
+
+.company-box {
+  float: left;
+  width: 35%;
+  height: 100%;
+  margin-top: 50px;
+}
+
+.company-box .company {
+  background: #62a696;
+  width: 70%;
+  height: 300px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.company-box .company a {
+  color: #fff;
+}
+
+.company-box .company img {
+  min-width: 120px;
+  width: 50%;
+  height: 50%;
+  margin-bottom: 10px;
+}
+
+.scorll-box {
+  position: fixed;
+  right: 1%;
+  top: 75%;
 }
