--- a/ngblog/app/views/admin_edit_post.html
+++ b/ngblog/app/views/admin_edit_post.html
@@ -1,32 +1,128 @@
-<form ng-submit="updatePost(post.id)">
-  <input required ng-minlength=3 ng-maxlength=512 type="text" ng-model="post.title" />
-  <div class="error" ng-show="post.title.$dirty && post.title.$invalid">
-    <small class="error" ng-show="post.title.$error.required">
-      Your name is required.
-    </small>
-    <small class="error" ng-show="post.title.$error.minlength">
-      Your name is required to be at least 3 characters
-    </small>
-    <small class="error" ng-show="post.title.$error.maxlength">
-      Your name cannot be longer than 20 characters
-    </small>
+
+<style>
+#markdown {
+  min-height: 500px;
+  position: relative;
+  width: 100%;
+  margin-bottom: 10px;
+}
+#editor {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  bottom: 0;
+  right: 50%;
+}
+#editor-tool-bar {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  bottom: 0;
+  right: 51%;
+  height: 30px;
+}
+#result {
+  position: absolute;
+  top: 50px;
+  left: 51%;
+  bottom: 0;
+  right: 0;
+}
+
+.m-pill {
+  border: 1px solid #dddddd;
+  border-radius: 8px;
+  color: #444;
+  font-size: 12px;
+  line-height: 30px;
+  margin-right: 6px;
+  padding: 0 5px;
+}
+</style>
+
+<h1>编辑文章</h1>
+<form ng-submit="updatePost(post.id)" class="form-horizontal col-md-12">
+  <div class="form-group">
+    <label for="title" class="col-md-2 control-label">标题</label>
+    <div class="col-md-10">
+      <input type="text" ng-model="post.title" class="form-control" required>
+    </div>
   </div>
-  <textarea ng-model="post.summary"></textarea>
-  <textarea ng-model="post.content"></textarea>
-  <textarea ng-model="post.markdown"></textarea>
-  <input type="hidden" ng-model="post.img" />
-  <input type="text" ng-model="post.author" />
-  <select ng-model="post.is_recommend">
-    <option value="1" selected>推荐</option>
-    <option value="0">不推荐</option>
-  </select>
-  <select ng-model="post.is_published">
-    <option value="1" selected>是</option>
-    <option value="0">否</option>
-  </select>
-  <select ng-model="post.can_comment">
-    <option value="1" selected>可以</option>
-    <option value="0">不可以</option>
-  </select>
-  <button type="submit">update</button>
+  <div class="form-group">
+    <label for="author" class="col-md-2 control-label">作者</label>
+    <div class="col-md-10">
+      <input type="text" ng-model="post.author" class="form-control" required>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="summary" class="col-md-2 control-label">摘要</label>
+    <div class="col-md-10">
+      <textarea ng-model="post.summary" rows="10" class="form-control" required></textarea>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="image" class="col-md-2 control-label">图片</label>
+    <div class="col-md-10">
+      <input type="file" ng-model="post.img">
+      <p class="help-block">请上传图片</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="content" class="col-md-2 control-label">内容</label>
+    <div class="col-md-10">
+      <tabset justified="true">
+        <tab heading="富文本编辑器">
+          <textarea ueditor ng-model="post.content"></textarea>
+        </tab>
+        <tab heading="markdown语法">
+          <div nclass="form-control" id="markdown">
+            <div id="editor-tool-bar">
+              <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span>
+              <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
+            </div>
+            <div id="editor" ng-model="post.markdown" ace></div>
+            <div id="result" ng-bind-html="markdown"></div>
+          </div>
+        </tab>
+      </tabset>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="content" class="col-md-2 control-label">标签</label>
+    <div class="col-md-10 tags">
+      <tags-input ng-model="post.tags">
+        <auto-complete source="loadTags($query)"></auto-complete>
+      </tags-input>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-md-10 col-md-offset-2">
+      <label ng-click="isCollapsed = !isCollapsed">
+        <span ng-class="{true: 'glyphicon glyphicon-chevron-down', false: 'glyphicon glyphicon-chevron-up'}[isCollapsed]"></span> 高级设置</label>
+      <div collapse="isCollapsed">
+        <div>
+          <label class="checkbox-inline">
+            <input type="checkbox" ng-model="post.is_recommend" value=""> 推荐
+          </label>
+          <label class="checkbox-inline">
+            <input type="checkbox" ng-model="post.can_comment" value=""> 允许评论
+          </label>
+          <label class="checkbox-inline">
+            <input type="checkbox" ng-model="post.is_published" value=""> 推荐
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="btn-group col-md-12 col-md-offset-6">
+    <button type="submit" class="btn btn-lg btn-default">提交</button>
+  </div>
 </form>
+
+<script src="/vendor/ueditor/ueditor.config.js"></script>
+<script src="/vendor/ueditor/ueditor.all.js"></script>
+
+<script src="/vendor/ace/src/ace.js"></script>
+<link rel="stylesheet" href="/vendor/highlight/styles/default.css">
+<script src="/vendor/highlight/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
