fixed main.html style bug
修复了主页样式的bug

--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -164,7 +164,7 @@ body {
   padding-top: 150px;
 }
 
-.company-box {
+.main-company-box {
   float: left;
   width: 25%;
   height: 100%;
@@ -172,19 +172,19 @@ body {
 
 }
 
-.two-code-pic {
+.main-two-code-pic {
   height: 130px;
   margin: 15px auto;
   min-width: 125px;
   width: 35%;
 }
 
-.two-code-pic img {
+.main-two-code-pic img {
   width: 100%;
   height: 100%;
 }
 
-.company-inf {
+.main-company-inf {
   min-width: 125px;
   width: 35%;
   margin: 0 auto;
