--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -40,11 +40,11 @@
       </carousel>
     </div>
   </div>
-  <div class="company-box hidden-xs">
-    <div class="two-code-pic">
+  <div class="main-company-box hidden-xs">
+    <div class="main-two-code-pic">
       <img src="images/two-code.jpg">
     </div>
-    <div class="company-inf">
+    <div class="main-company-inf">
       <p><a>学壹传媒有限公司</a></p>
       <p><a>联系电话</a></p>
       <p><a>微信</a></p>
