--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -80,7 +80,7 @@ body {
   float: left;
   height: 40px;
   left: 62%;
-  padding: 5px;
+  padding: 5px 10px;
   position: absolute;
   top: 305px;
   width: 35%;
@@ -100,7 +100,8 @@ body {
 }
 
 .nav-search img {
-  margin-top: -2px;
+  margin-top: 0px;
+  width: 30px;
 }
 
 .main-posts {
@@ -306,6 +307,7 @@ a:hover,a:focus {
   background: #bdbdbd;
   width: 90%;
   height: 40px;
+  padding: 0 10px;
 }
 
 .posts-head .posts-search input {
@@ -317,6 +319,10 @@ a:hover,a:focus {
 
 .posts-head .posts-search a {
   float: right;
+}
+
+.posts-head .posts-search a img {
+  width: 30px;
 }
 
 .posts-box {
@@ -381,14 +387,20 @@ a:hover,a:focus {
   text-align: center;
 }
 
-.posts-box .post-picture .image {
+.posts-box .post-picture-box {
   width: 90%;
   height: 85%;
+}
+
+.posts-box .post-picture .image {
+  width: 100%;
+  height: 100%;
 }
 
 .posts-box .post-picture span {
   color: #2f5b49;
   margin: 0 5px;
+  font-size: 12px;
 }
 
 .company-box {
@@ -415,7 +427,12 @@ a:hover,a:focus {
   min-width: 120px;
   width: 50%;
   height: 50%;
-  margin-bottom: 10px;
+  margin: 20px 0 10px 0;
+}
+
+.posts-pagination {
+  width: 90%;
+  margin: 0 7.4%;
 }
 
 .scorll-box {
