Add ng-file-upload bower and fix img upload for post.

--- a/ngblog/app/views/admin_edit_post.html
+++ b/ngblog/app/views/admin_edit_post.html
@@ -63,8 +63,11 @@
   <div class="form-group">
     <label for="image" class="col-md-2 control-label">图片</label>
     <div class="col-md-10">
-      <input type="file" ng-model="post.img">
-      <p class="help-block">请上传图片</p>
+      <input type="file" nv-file-select uploader="uploader"/><br/>
+      <div>
+        <p>预览</p>
+        <p><img src="{{post.img}}" alt="请上传图片" /></p>
+      </div>
     </div>
   </div>
   <div class="form-group">
