add the navbar and the topbar

--- a/ngblog/app/views/admin_new_post.html
+++ b/ngblog/app/views/admin_new_post.html
@@ -37,87 +37,123 @@
   margin-right: 6px;
   padding: 0 5px;
 }
-</style>
+.container {
+  background-color: #f5f5f5;
+}
+.left-side {
+  text-align: center;
+}
+.left-side li.actives {
+  border-right: 2px solid #d84b3a;
+}
+.left-side li > span {
+  display: block;
+}
+.left-side ul > span {
+  color: #5a5a5a;
+  font-size: 20px;
+}
+.right-side {
+  background-color: #fff;
+}
 
-<h1>添加文章</h1>
-<form ng-submit="addPost()" class="form-horizontal col-md-12">
-  <div class="form-group">
-    <label for="title" class="col-md-2 control-label">标题</label>
-    <div class="col-md-10">
-      <input type="text" ng-model="title" class="form-control" required>
-    </div>
+</style>
+<div class="col-md-1 left-side">
+  <ul>
+    <li><a href="#"><img src="/images/yeoman.png" class="img-circle img-responsive"></a></li>
+    <span>...</span>
+    <li class="acitves"><a href="#"><span class="glyphicon glyphicon-dashboard"></span>dashboard</a></li>
+    <span>...</span>
+    <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span>articles</a></li>
+    <span>...</span>
+    <li><a href="#"><span class="glyphicon glyphicon-th"></span>settings</a></li>
+  </ul>
+</div>
+<div class="col-md-11 right-side">
+  <div>
+
   </div>
-  <div class="form-group">
-    <label for="author" class="col-md-2 control-label">作者</label>
-    <div class="col-md-10">
-      <input type="text" ng-model="author" class="form-control" required>
-    </div>
+  <div class="page-header">
+    <h1>添加文章</h1>
   </div>
-  <div class="form-group">
-    <label for="summary" class="col-md-2 control-label">摘要</label>
-    <div class="col-md-10">
-      <textarea ng-model="summary" rows="10" class="form-control" required></textarea>
+  <form ng-submit="addPost()" class="form-horizontal col-md-12 add-article">
+    <div class="form-group">
+      <label for="title" class="col-md-1 control-label">标题</label>
+      <div class="col-md-11">
+        <input type="text" ng-model="title" class="form-control" required>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="image" class="col-md-2 control-label">图片</label>
-    <div class="col-md-10">
-      <input type="file" ng-model="img">
-      <p class="help-block">请上传图片</p>
+    <div class="form-group">
+      <label for="author" class="col-md-1 control-label">作者</label>
+      <div class="col-md-11">
+        <input type="text" ng-model="author" class="form-control" required>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="content" class="col-md-2 control-label">内容</label>
-    <div class="col-md-10">
-      <tabset justified="true">
-        <tab heading="富文本编辑器">
-          <textarea ueditor ng-model="content"></textarea>
-        </tab>
-        <tab heading="markdown语法">
-          <div nclass="form-control" id="markdown">
-            <div id="editor-tool-bar">
-              <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span>
-              <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
+    <div class="form-group">
+      <label for="summary" class="col-md-1 control-label">摘要</label>
+      <div class="col-md-11">
+        <textarea ng-model="summary" rows="10" class="form-control" required></textarea>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="image" class="col-md-1 control-label">图片</label>
+      <div class="col-md-11">
+        <input type="file" ng-model="img">
+        <p class="help-block">请上传图片</p>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="content" class="col-md-1 control-label">内容</label>
+      <div class="col-md-11 editor">
+        <tabset justified="true">
+          <tab heading="富文本编辑器">
+            <textarea ueditor ng-model="content"></textarea>
+          </tab>
+          <tab heading="markdown语法">
+            <div nclass="form-control" id="markdown">
+              <div id="editor-tool-bar">
+                <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span>
+                <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
+              </div>
+              <div id="editor" ng-model="markdown" ace></div>
+              <div id="result" ng-bind-html="markdown"></div>
             </div>
-            <div id="editor" ng-model="markdown" ace></div>
-            <div id="result" ng-bind-html="markdown"></div>
+          </tab>
+        </tabset>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="content" class="col-md-1 control-label">标签</label>
+      <div class="col-md-11 tags">
+        <tags-input ng-model="tags">
+          <auto-complete source="loadTags($query)"></auto-complete>
+        </tags-input>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-11 col-md-offset-1">
+        <label ng-click="isCollapsed = !isCollapsed">
+          <span ng-class="{true: 'glyphicon glyphicon-chevron-down', false: 'glyphicon glyphicon-chevron-up'}[isCollapsed]"></span> 高级设置</label>
+        <div collapse="isCollapsed">
+          <div>
+            <label class="checkbox-inline">
+              <input type="checkbox" ng-model="is_recommend" value=""> 推荐
+            </label>
+            <label class="checkbox-inline">
+              <input type="checkbox" ng-model="can_comment" value=""> 允许评论
+            </label>
+            <label class="checkbox-inline">
+              <input type="checkbox" ng-model="is_published" value=""> 推荐
+            </label>
           </div>
-        </tab>
-      </tabset>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="content" class="col-md-2 control-label">标签</label>
-    <div class="col-md-10 tags">
-      <tags-input ng-model="tags">
-        <auto-complete source="loadTags($query)"></auto-complete>
-      </tags-input>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-md-10 col-md-offset-2">
-      <label ng-click="isCollapsed = !isCollapsed">
-        <span ng-class="{true: 'glyphicon glyphicon-chevron-down', false: 'glyphicon glyphicon-chevron-up'}[isCollapsed]"></span> 高级设置</label>
-      <div collapse="isCollapsed">
-        <div>
-          <label class="checkbox-inline">
-            <input type="checkbox" ng-model="is_recommend" value=""> 推荐
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" ng-model="can_comment" value=""> 允许评论
-          </label>
-          <label class="checkbox-inline">
-            <input type="checkbox" ng-model="is_published" value=""> 推荐
-          </label>
         </div>
       </div>
     </div>
-  </div>
-  <div class="btn-group col-md-12 col-md-offset-6">
-    <button type="submit" class="btn btn-lg btn-default">提交</button>
-  </div>
-</form>
-
+    <div class="btn-group col-md-6 col-md-offset-6">
+      <button type="submit" class="btn btn-lg btn-default">提交</button>
+    </div>
+  </form>
+</div>
 <script src="/vendor/ueditor/ueditor.config.js"></script>
 <script src="/vendor/ueditor/ueditor.all.js"></script>
 
