Add file upload to new post.

--- a/ngblog/app/views/admin_edit_post.html
+++ b/ngblog/app/views/admin_edit_post.html
@@ -84,7 +84,7 @@
               <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
             </div>
             <div id="editor" ng-model="post.markdown" ace></div>
-            <div id="result" ng-bind-html="markdown(post.markdown)"></div>
+            <div id="result" ng-bind-html=""></div>
           </div>
         </tab>
       </tabset>
@@ -124,8 +124,3 @@
 
 <script src="/vendor/ueditor/ueditor.config.js"></script>
 <script src="/vendor/ueditor/ueditor.all.js"></script>
-
-<script src="/vendor/ace/src/ace.js"></script>
-<link rel="stylesheet" href="/vendor/highlight/styles/default.css">
-<script src="/vendor/highlight/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
