--- a/ngblog/app/views/admin_new_post.html
+++ b/ngblog/app/views/admin_new_post.html
@@ -92,14 +92,17 @@
     <div class="form-group">
       <label for="summary" class="col-md-1 control-label">摘要</label>
       <div class="col-md-11">
-        <textarea ng-model="summary" rows="10" class="form-control" required></textarea>
+        <textarea ng-model="summary" rows="6" class="form-control" required></textarea>
       </div>
     </div>
     <div class="form-group">
-      <label for="image" class="col-md-1 control-label">图片</label>
-      <div class="col-md-11">
-        <input type="file" ng-model="img">
-        <p class="help-block">请上传图片</p>
+      <label for="image" class="col-md-2 control-label">图片</label>
+      <div class="col-md-10">
+        <input type="file" nv-file-select uploader="uploader"/><br/>
+        <div>
+          <p>预览</p>
+          <p><img src="{{img}}" alt="请上传图片" /></p>
+        </div>
       </div>
     </div>
     <div class="form-group">
@@ -115,8 +118,8 @@
                 <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span>
                 <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
               </div>
-              <div id="editor" ng-model="markdown" ace></div>
-              <div id="result" ng-bind-html="markdown"></div>
+              <div id="editor" ng-model="markdown"></div>
+              <div id="result" ng-bind-html=""></div>
             </div>
           </tab>
         </tabset>
@@ -154,10 +157,12 @@
     </div>
   </form>
 </div>
+
 <script src="/vendor/ueditor/ueditor.config.js"></script>
 <script src="/vendor/ueditor/ueditor.all.js"></script>
-
+<!--
 <script src="/vendor/ace/src/ace.js"></script>
 <link rel="stylesheet" href="/vendor/highlight/styles/default.css">
 <script src="/vendor/highlight/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+-->
