--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -246,7 +246,6 @@ a:hover,a:focus {
   posts.html css
 */
 .posts-head  {
-  float: left;
   width: 100%;
   height: 80px;
   margin: 0;
@@ -440,7 +439,158 @@ a:hover,a:focus {
   right: 1%;
   top: 75%;
 }
+/*
+show_post.html
+*/
 
+.show-posts-box {
+  float: left;
+  width: 65%;
+  margin: 50px 0 50px 6%;
+}
+
+
+.show-posts-box .post-item {
+  position: relative;
+  width: 100%;
+}
+
+.show-posts-box .post-title {
+  position: absolute;
+  width: 100%;
+  height: 55px;
+  background-image: url('/images/post-title.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  top: 10px;
+  left: -4%;
+  z-index: 2;
+  padding: 10px 5%;
+  color: #fff;
+}
+
+.show-posts-box .post-text {
+  float: left;
+  width: 96%;
+  border: 1px solid #ddd;
+  box-shadow: 5px 5px 5px #ddd;
+  margin-bottom: 20px;
+}
+
+.show-posts-box .post-inf {
+  padding: 70px 0 0 10px;
+  width: 70%;
+  margin: 0 auto;
+
+}
+
+.show-posts-box .post-picture {
+  width: 50%;
+  margin: 0 auto;
+  max-height: 250px;
+
+}
+
+.show-posts-box .post-content {
+  margin-top: 20px;
+  min-height: 225px;
+}
+
+.show-posts-box .post-picture .image {
+  width: 100%;
+  height: 100%;
+  max-height: 250px;
+}
+
+.show-posts-box .post-time {
+  float: right;
+  margin: 50px 0 20px;
+}
+
+.show-posts-box .post-time span {
+  color: #2f5b49;
+  margin: 0 5px;
+}
+
+.showpost-company-box {
+  float: left;
+  width: 28%;
+  height: 100%;
+  margin-top: 50px;
+}
+
+.showpost-company-box .company {
+  background: #62a696;
+  width: 70%;
+  height: 300px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.showpost-company-box .company a {
+  color: #fff;
+}
+
+.showpost-company-box .company img {
+  min-width: 120px;
+  width: 50%;
+  height: 50%;
+  margin: 20px 0 10px 0;
+}
+
+.history-posts-box {
+  float: left;
+  width: 28%;
+  height: 100%;
+  margin-top: 50px;
+
+}
+
+.history-posts {
+  width: 100%;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.history-titile {
+  width: 90%;
+  height: 50px;
+  background-image: url('/images/post-title.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin: 0 auto;
+  position: absolute;
+  left: 3%;
+  top: 20px;
+  padding: 9px 0 0 6%;
+}
+
+.history-titile span{
+  color: #fff;
+}
+
+.history-posts-item {
+  width: 86%;
+  height: 355px;
+  margin: 0 auto;
+  border: 1px solid #ddd;
+  overflow: hidden;
+}
+
+.history-posts-list {
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 70px;
+  text-align: center;
+}
+
+.history-posts-list li{
+  width: 100%;
+  overflow: hidden;
+  height: 20px;
+  line-height: 20px;
+}
 /* admin new post css start */
 
 .tags ul li {
