--- a/ngblog/app/views/posts.html
+++ b/ngblog/app/views/posts.html
@@ -18,22 +18,24 @@
 <div class="posts-box">
   <div class="posts">
     <div class="post-item" ng-repeat="p in posts">
-      <div class="post-title">
-        <span>{{p.title}}</span>
-      </div>
-      <div class="post-text">
-        <div class="post-inf">
-          <p>{{p.content}}</P>
+      <a ng-href="#/posts/{{p.id}}">
+        <div class="post-title">
+          <span>{{p.title}}</span>
         </div>
-        <div class="post-picture">
-          <div class="post-picture-box">
-            <img class="image" ng-src="{{p.img.url}}">
+        <div class="post-text">
+          <div class="post-inf">
+            <p>{{p.content}}</P>
           </div>
-          <span>{{p.publish_time.substr(0,10)}}</span>
-          <img src="/images/post-ico.png">
-          <span>(<span>500</span>)</span>
+          <div class="post-picture">
+            <div class="post-picture-box">
+              <img class="image" ng-src="{{p.img.url}}">
+            </div>
+            <span>{{p.publish_time.substr(0,10)}}</span>
+            <img src="/images/post-ico.png">
+            <span>(<span>500</span>)</span>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
   </div>
   <div class="company-box">
