--- a/ngblog/app/views/show_post.html
+++ b/ngblog/app/views/show_post.html
@@ -11,39 +11,46 @@
   <div class="posts-search">
     <div>
       <input type="text" placeholder="SEACH">
-      <a><img src="/images/search-ico.png"></a>
+      <a>
+        <img src="/images/search-ico.png">
+      </a>
     </div>
   </div>
 </div>
 <div class="show-posts-box">
   <div class="post-item">
-      <div class="post-title">
-        <span>{{post.title}}</span>
-      </div>
-      <div class="post-text">
-        <div class="post-inf">
-          <div class="post-picture">
-              <img class="image" ng-src="{{post.img.url}}">
-          </div>
-          <div class="post-content">
-            <p>{{post.content}}</P>
-          </div>
-          <div class="post-time">
-            <span>{{post.publish_time.substr(0,10)}}</span>
-            <img src="/images/post-ico.png">
-            <span>(<span>500</span>)</span>
-          </div>
+    <div class="post-title">
+      <span>{{post.title}}</span>
+    </div>
+    <div class="post-text">
+      <div class="post-inf">
+        <div class="post-picture">
+          <img class="image" ng-src="{{post.img.url}}">
+        </div>
+        <div class="post-content">
+          <p ng-bind-html="post.content"></p>
+        </div>
+        <div class="post-time">
+          <span>{{post.publish_time.substr(0,10)}}</span>
+          <img src="/images/post-ico.png">
+          <span>(
+            <span>500</span>)</span>
         </div>
       </div>
+    </div>
   </div>
 </div>
 <div class="showpost-company-box">
   <div class="company">
     <img src="images/two-code.jpg">
-    <p><a>学壹传媒有限公司</a></p>
-    <p><a>联系电话</a></p>
-    <p><a>微信</a></p>
-    <p><a>邮箱</a></p>
+    <p><a>学壹传媒有限公司</a>
+    </p>
+    <p><a>联系电话</a>
+    </p>
+    <p><a>微信</a>
+    </p>
+    <p><a>邮箱</a>
+    </p>
   </div>
 </div>
 <div class="history-posts-box">
