--- a/ngblog/app/views/admin_new_post.html
+++ b/ngblog/app/views/admin_new_post.html
@@ -38,31 +38,51 @@
   padding: 0 5px;
 }
 .container {
-  background-color: #f5f5f5;
+  background-color: #272d33;
 }
 .left-side {
   text-align: center;
 }
-.left-side li.actives {
-  border-right: 2px solid #d84b3a;
+.left-side a {
+  color: #f5f5f5;
 }
-.left-side li > span {
+.left-side > ul {
+  padding-top: 20px;
+}
+.left-side .nav-acitves {
+  border-left: 2px solid #d84b3a;
+  color: #d84b3a;
+}
+.nav-actives a {
+  color: #fff;
+}
+.nav-actives a span {
+  color: #d84b3a;
+}
+.left-side li > a > span {
   display: block;
 }
 .left-side ul > span {
   color: #5a5a5a;
   font-size: 20px;
+  margin: 10px auto;
 }
 .right-side {
   background-color: #fff;
 }
-
+.right-side .well {
+  margin: 0 -15px;
+  border-radius: 0;
+}
+.right-side .well ul li {
+  display: inline-block;
+}
 </style>
 <div class="col-md-1 left-side">
   <ul>
-    <li><a href="#"><img src="/images/yeoman.png" class="img-circle img-responsive"></a></li>
+    <li><a href="#" style="position: relative;"><img src="/images/yeoman.png" class="img-circle img-responsive"><span class="badge" style="position: absolute; top: 15px; left: 3px; background-color: #fd4e3e; color: #fff;border-radius: 50%;">30</span></a></li>
     <span>...</span>
-    <li class="acitves"><a href="#"><span class="glyphicon glyphicon-dashboard"></span>dashboard</a></li>
+    <li class="nav-acitves"><a href="#"><span class="glyphicon glyphicon-dashboard" style="color: #fd4e3e;"></span>dashboard</a></li>
     <span>...</span>
     <li><a href="#"><span class="glyphicon glyphicon-align-justify"></span>articles</a></li>
     <span>...</span>
@@ -70,10 +90,13 @@
   </ul>
 </div>
 <div class="col-md-11 right-side">
-  <div>
-
+  <div class="well well-sm">
+    <ul>
+      <li><span class="glyphicon glyphicon-refresh" style="border-radius: 50%;background-color: #fd4e3e; padding: 8px; color: #fff;"></span><button class="btn btn-default" style="border-radius: 15px; background-color: #f0f0f0;margin: 5px;">dashboard</button></li>
+      <li><input type="text" class="form-control pull-right"></li>
+    </ul>
   </div>
-  <div class="page-header">
+  <div class="page-header" style="clear: both;">
     <h1>添加文章</h1>
   </div>
   <form ng-submit="addPost()" class="form-horizontal col-md-12 add-article">
