--- a/ngblog/app/views/admin_new_post.html
+++ b/ngblog/app/views/admin_new_post.html
@@ -103,28 +103,28 @@
     <div class="form-group">
       <label for="title" class="col-md-1 control-label">标题</label>
       <div class="col-md-11">
-        <input type="text" ng-model="title" class="form-control" required>
+        <input type="text" ng-model="post.title" class="form-control" required>
       </div>
     </div>
     <div class="form-group">
       <label for="author" class="col-md-1 control-label">作者</label>
       <div class="col-md-11">
-        <input type="text" ng-model="author" class="form-control" required>
+        <input type="text" ng-model="post.author" class="form-control" required>
       </div>
     </div>
     <div class="form-group">
       <label for="summary" class="col-md-1 control-label">摘要</label>
       <div class="col-md-11">
-        <textarea ng-model="summary" rows="6" class="form-control" required></textarea>
+        <textarea ng-model="post.summary" rows="6" class="form-control" required></textarea>
       </div>
     </div>
     <div class="form-group">
-      <label for="image" class="col-md-2 control-label">图片</label>
+      <label for="img" class="col-md-2 control-label">图片</label>
       <div class="col-md-10">
         <input type="file" nv-file-select uploader="uploader"/><br/>
         <div>
           <p>预览</p>
-          <p><img src="{{img}}" alt="请上传图片" /></p>
+          <p><img src="{{post.img}}" alt="请上传图片" /></p>
         </div>
       </div>
     </div>
@@ -133,7 +133,7 @@
       <div class="col-md-11 editor">
         <tabset justified="true">
           <tab heading="富文本编辑器">
-            <textarea ueditor ng-model="content"></textarea>
+            <textarea ng-model="post.content" ueditor></textarea>
           </tab>
           <tab heading="markdown语法">
             <div nclass="form-control" id="markdown">
@@ -141,8 +141,8 @@
                 <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span>
                 <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
               </div>
-              <div id="editor" ng-model="markdown"></div>
-              <div id="result" ng-bind-html=""></div>
+              <div id="editor" ace ng-model="post.markdown"></div>
+              <div id="result" ng-bind-html="markdown(post.markdown)"></div>
             </div>
           </tab>
         </tabset>
@@ -151,8 +151,8 @@
     <div class="form-group">
       <label for="content" class="col-md-1 control-label">标签</label>
       <div class="col-md-11 tags">
-        <tags-input ng-model="tags">
-          <auto-complete source="loadTags($query)"></auto-complete>
+        <tags-input ng-model="post.tags">
+          <!--<auto-complete source="loadTags($query)"></auto-complete>-->
         </tags-input>
       </div>
     </div>
@@ -163,13 +163,13 @@
         <div collapse="isCollapsed">
           <div>
             <label class="checkbox-inline">
-              <input type="checkbox" ng-model="is_recommend" value=""> 推荐
+              <input type="checkbox" ng-model="post.is_recommend" value=""> 推荐
             </label>
             <label class="checkbox-inline">
-              <input type="checkbox" ng-model="can_comment" value=""> 允许评论
+              <input type="checkbox" ng-model="post.can_comment" value=""> 允许评论
             </label>
             <label class="checkbox-inline">
-              <input type="checkbox" ng-model="is_published" value=""> 推荐
+              <input type="checkbox" ng-model="post.is_published" value=""> 推荐
             </label>
           </div>
         </div>
@@ -183,9 +183,8 @@
 
 <script src="/vendor/ueditor/ueditor.config.js"></script>
 <script src="/vendor/ueditor/ueditor.all.js"></script>
-<!--
+
 <script src="/vendor/ace/src/ace.js"></script>
 <link rel="stylesheet" href="/vendor/highlight/styles/default.css">
 <script src="/vendor/highlight/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
--->
