--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -4,7 +4,7 @@
   </div>
   <div class="header-nav">
     <div class="nav-blog">
-      <a>BLOG</a>
+      <a ng-href="/#/posts">BLOG</a>
     </div>
     <div class="nav-picture">
       <a>PHOTO</a>
