--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -591,6 +591,89 @@ show_post.html
   height: 20px;
   line-height: 20px;
 }
+
+
+/*
+search_posts.html
+*/
+.search-posts-box {
+  float: left;
+  width: 100%;
+  background: #fff;
+  margin-top: 20px;
+}
+
+.search-posts-box .posts {
+  width: 60%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.search-posts-box .post-item {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  margin: 50px 0 10px;
+
+}
+
+.search-posts-box .post-title {
+  position: absolute;
+  width: 100%;
+  height: 55px;
+  background-image: url('/images/post-title.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  top: 10px;
+  z-index: 2;
+  padding: 10px 5%;
+  color: #fff;
+}
+
+
+.search-posts-box .post-text {
+  position: absolute;
+  width: 96%;
+  height: 300px;
+  border: 1px solid #ddd;
+  left: 4%;
+  z-index: 1;
+  box-shadow: 5px 5px 5px #ddd;
+}
+
+.search-posts-box .post-inf {
+  float: left;
+  height: 100%;
+  padding: 70px 0 0 10px;
+  overflow: hidden;
+  width: 60%;
+}
+
+.search-posts-box .post-picture {
+  float: left;
+  height: 100%;
+  width: 40%;
+  padding: 70px 0 0 10px;
+  text-align: center;
+}
+
+.search-posts-box .post-picture-box {
+  width: 90%;
+  height: 85%;
+}
+
+.search-posts-box .post-picture .image {
+  width: 100%;
+  height: 100%;
+}
+
+.search-posts-box .post-picture span {
+  color: #2f5b49;
+  margin: 0 5px;
+  font-size: 12px;
+}
+
+
 /* admin new post css start */
 
 .tags ul li {
