Add baseController and add header.html.

--- a/ngblog/app/views/main.html
+++ b/ngblog/app/views/main.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="nav-search">
-    <input type="text" placeholder="SEACH" ng-model="keyword">
+    <input type="text" placeholder="SEACH" ng-model="keyword" ng-enter="search()">
     <a ng-href="/#/search/posts?keyword={{keyword}}"><img src="/images/search-ico.png"></a>
   </div>
 </div>
