--- a/ngblog/app/views/search_posts.html
+++ b/ngblog/app/views/search_posts.html
@@ -1,20 +1,4 @@
-<div class="posts-head hidden-xs">
-  <div class="posts-logo">
-    <img src="images/logo.png">
-  </div>
-  <div class="posts-blog">
-    <a ng-href="/#/posts">BLOG</a>
-  </div>
-  <div class="posts-photo">
-    <a>PHOTO</a>
-  </div>
-  <div class="posts-search">
-    <div>
-      <input type="text" placeholder="SEACH" ng-model="keyword" ng-enter="search()">
-      <a ng-href="/#/search/posts?keyword={{keyword}}"><img src="/images/search-ico.png"></a>
-    </div>
-  </div>
-</div>
+<ng-include src="'views/header.html'"></ng-include>
 <div class="search-message" ng-hide="messageMark">
   <span>没有搜到相关文章</span>
 </div>
