--- a/ngblog/app/views/show_post.html
+++ b/ngblog/app/views/show_post.html
@@ -1,22 +1,4 @@
-<div class="posts-head hidden-xs">
-  <div class="posts-logo">
-    <img src="images/logo.png">
-  </div>
-  <div class="posts-blog">
-    <a>BLOG</a>
-  </div>
-  <div class="posts-photo">
-    <a>PHOTO</a>
-  </div>
-  <div class="posts-search">
-    <div>
-      <input type="text" placeholder="SEACH" ng-model="keyword">
-      <a ng-href="/#/search/posts?keyword={{keyword}}">
-        <img src="/images/search-ico.png">
-      </a>
-    </div>
-  </div>
-</div>
+<ng-include src="'views/header.html'"></ng-include>
 <div class="show-posts-box">
   <div class="post-item">
     <div class="post-title">
