--- a/ngblog/app/views/show_post.html
+++ b/ngblog/app/views/show_post.html
@@ -3,7 +3,7 @@
     <img src="images/logo.png">
   </div>
   <div class="posts-blog">
-    <a>BLOG</a>
+    <a ng-href="/#/posts">BLOG</a>
   </div>
   <div class="posts-photo">
     <a>PHOTO</a>
@@ -69,3 +69,4 @@
     </div>
   </div>
 </div>
+<ng-include src="'views/footer.html'"></ng-include>
