fixed search_posts bug
修复了搜索为空时的bug

--- a/ngblog/app/views/search_posts.html
+++ b/ngblog/app/views/search_posts.html
@@ -1,5 +1,5 @@
 <ng-include src="'views/header.html'"></ng-include>
-<div class="search-message" ng-hide="messageMark">
+<div class="search-message" ng-hide=messageMark>
   <span>没有搜到相关文章</span>
 </div>
 <div class="search-posts-box">
